Remove spotbugs excludes  (#184)
Remove SpotBugs excludes for GeoPointDeserializer